civo.mongo.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: db-touno-io
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: db-touno-io
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mongodb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - env:
        - name: MONGO_INITDB_ROOT_USERNAME
          value: gchPh74RkPpK16f5xf8oIuTgfItF3e
        - name: MONGO_INITDB_ROOT_PASSWORD
          value: ZpM3EOtDe3PlmhOvBKq3CU4C3LDAYw
        image: mongo:4.2.12
        imagePullPolicy: IfNotPresent
        name: mongodb
        ports:
        - containerPort: 27017
          name: mongodb
          protocol: TCP
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "1Gi"
            cpu: "250m"
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data/db
          name: mongodb-persistent-storage
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: mongodb-persistent-storage
        persistentVolumeClaim:
          claimName: mongodb-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    notice: mongodb
  name: mongodb
  namespace: db-touno-io
spec:
  type: ClusterIP
  ports:
  - name: "mongodb"
    port: 27017
    targetPort: 27017
  selector:
    app: mongodb
