deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notice
  namespace: default
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: notice-mongo
  template:
    metadata:
      labels:
        app: notice-mongo
    spec:
      containers:
      - name: mongo
        image: mongo:5
        ports:
        - containerPort: 27017
          protocol: TCP
        resources:
          limits:
            cpu: 1
            memory: 512Mi
          requests:
            cpu: 200m
            memory: 256Mi
        volumeMounts:
        - mountPath: /data/db
          name: db-mongo
      volumes:
      - name: db-mongo
        persistentVolumeClaim:
          claimName: pv-db-mongo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notice
  namespace: default
spec:
  #replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  selector:
    matchLabels:
      app: notice
  template:
    metadata:
      labels:
        app: notice
    spec:
      containers:
      - name: notice
        image: notice-api:latet
        ports:
        - containerPort: 3000
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 128Mi
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
      - name: notice-ui
        image: notice-ui:latet
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 128Mi
        livenessProbe:
          httpGet:
            path: /
            port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: notice
  namespace: default
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  selector:
    app: notice
---
apiVersion: v1
kind: Service
metadata:
  name: notice-ui
  namespace: default
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: notice
