k8s.notice.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: notice-line
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    touno-io: notice-ui
  name: notice-ui
  namespace: notice-line
spec:
  replicas: 1
  selector:
    matchLabels:
      touno-io: notice-ui
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  progressDeadlineSeconds: 5
  template:
    metadata:
      labels:
        touno-io: notice-ui
    spec:
      restartPolicy: Always
      containers:
      - name: notice-ui
        image: dvgamerr/notice-ui:latest
        ports:
        - name: liveness
          containerPort: 4000
        livenessProbe:
          httpGet:
            path: /
            port: liveness
          failureThreshold: 10
          periodSeconds: 3
        resources:
          requests:
            memory: "64M"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "1"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    touno-io: notice-api
  name: notice-api
  namespace: notice-line
spec:
  replicas: 3
  selector:
    matchLabels:
      touno-io: notice-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  progressDeadlineSeconds: 5
  template:
    metadata:
      labels:
        touno-io: notice-api
    spec:
      restartPolicy: Always
      containers:
      - name: notice-api
        image: dvgamerr/notice-api:latest
        ports:
        - name: liveness
          containerPort: 3000
        livenessProbe:
          httpGet:
            path: /health
            port: liveness
          failureThreshold: 10
          periodSeconds: 3
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    touno-io: notice-ui
  name: notice-ui
  namespace: notice-line
spec:
  selector:
    touno-io: notice-ui
  ports:
  - name: "notice-ui"
    port: 80
    targetPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    touno-io: notice-api
  name: notice-api
  namespace: notice-line
spec:
  selector:
    touno-io: notice-api
  ports:
  - name: "notice-api"
    port: 80
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notice-app
  namespace: notice-line
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - notice.touno.io
    secretName: notice-cert
  rules:
  - host: notice.touno.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notice-ui
            port:
              number: 80
      - path: /liff
        pathType: Prefix
        backend:
          service:
            name: notice-ui
            port:
              number: 80
      - path: /line
        pathType: Prefix
        backend:
          service:
            name: notice-api
            port:
              number: 80
      - path: /notify
        pathType: Prefix
        backend:
          service:
            name: notice-api
            port:
              number: 80
      - path: /register
        pathType: Prefix
        backend:
          service:
            name: notice-api
            port:
              number: 80
      - path: /revoke
        pathType: Prefix
        backend:
          service:
            name: notice-api
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: notice-api
            port:
              number: 80
      - path: /webhook
        pathType: Prefix
        backend:
          service:
            name: notice-api
            port:
              number: 80
      - path: /db
        pathType: Prefix
        backend:
          service:
            name: notice-api
            port:
              number: 80
